--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "24.3.1",
+    "eslint": "^9.35.0",
+    "prettier": "^3.6.2",
     "tailwindcss": "^4",
     "typescript": "5.9.2"
   }
